--- a/index.html
+++ b/index.html
@@ -40,10 +40,20 @@
       <div id="note-pad"><img src="list-bg.png"></div>
     <table>
       <tr>
-        sdf
+        <td><input type="checkbox"> 1 1/2 cups milk </input>
+        </td>
+        <td>  <input type="checkbox"> 1/2 cup mascarpone </input>
+        </td>
+        <td> <input type="checkbox"> 1/2 tsp pink salt </input>
+        </td>
+        <td><input type="checkbox"> 1 lb Black Mission Figs
+        </td>
+        <td><input type="checkbox"> 1/2 cup brown sugar
+        </td>
+        <td><input type="checkbox"> 2-4 tbsp water </input>
+        </td>
       </tr>
       <tr>
-sdf
       </tr>
     </table>
   </div>
